<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pubnative Library</string>
    
    <string name="settings">Settings</string>
    
    <string name="interstitial">Interstitial</string>
    <string name="video_interstitial">Video Interstitial</string>
    <string name="banner">Banner</string>
    <string name="icon">Icon</string>
    <string name="list_item_brief">Game List</string>
    <string name="list_item_full">Native</string>
    <string name="carousel">Carousel</string>
    <string name="video_banner">Video Banner</string>
    <string name="in_feed_video">In-Feed Video</string>
    
    <string name="ad_count_">Ad Count:</string>
    
    <!-- Banner -->
    <string name="remove_ads">Remove Ads</string>
    
</resources>