<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:gravity="center"
        android:text="@string/settings"
        android:textAppearance="@android:style/TextAppearance.Large.Inverse" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />
     

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/button_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_interstitial"
                style="@style/PubNative.Button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/interstitial" />

            <Button
                android:id="@+id/btn_video_interstitial"
                style="@style/PubNative.Button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/video_interstitial" />

            <Button
                android:id="@+id/btn_banner"
                style="@style/PubNative.Button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/banner" />

            <Button
                android:id="@+id/btn_icon"
                style="@style/PubNative.Button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/icon" />

            <Button
                android:id="@+id/btn_list_item_brief"
                style="@style/PubNative.Button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/list_item_brief" />

            <Button
                android:id="@+id/btn_list_item_full"
                style="@style/PubNative.Button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/list_item_full" />

            <Button
                android:id="@+id/btn_carousel"
                style="@style/PubNative.Button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/carousel" />

            <Button
                android:id="@+id/btn_video_banner"
                style="@style/PubNative.Button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/video_banner" />

            <Button
                android:id="@+id/btn_in_feed_video"
                style="@style/PubNative.Button"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/button_margin"
                android:text="@string/in_feed_video" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>